graphql-parser/tests/snapshots/tests__query_var_default_float__parse_query__unix.snap
---
source: graphql-parser/tests/tests.rs
expression: "format!(\"{}\\n---\\n{:#?}\", & input, & parse_query_result)"
---
query Foo($site: Float = 0.5) {
  field
}

---
Ok(
    Document {
        definitions: [
            Operation(
                OperationDefinition {
                    position: Pos(1:1),
                    kind: Query,
                    description: None,
                    name: Some(
                        "Foo",
                    ),
                    variable_definitions: [
                        VariableDefinition {
                            position: Pos(1:11),
                            name: "site",
                            var_type: NamedType(
                                "Float",
                            ),
                            default_value: Some(
                                Float(
                                    0.5,
                                ),
                            ),
                        },
                    ],
                    directives: [],
                    selection_set: SelectionSet {
                        span: (
                            Pos(1:31),
                            Pos(3:1),
                        ),
                        items: [
                            Field(
                                Field {
                                    position: Pos(2:3),
                                    alias: None,
                                    name: "field",
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        span: (
                                            Pos(2:3),
                                            Pos(2:3),
                                        ),
                                        items: [],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ],
    },
)
